--- a/panther/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/panther/overlay/frameworks/base/core/res/res/values/config.xml
@@ -320,4 +320,10 @@
          Note: This should be only enabled on devices with high confidence on power measurement.
     -->
     <bool name="config_bg_current_drain_auto_restrict_abusive_apps">true</bool>
+    
+    <!-- Fingerprint from a certified device against current platform SPL level -->
+    <string name="config_certifiedFingerprint" translatable="false">google/panther/panther:13/TD1A.220804.031/9071314:user/release-keys</string>
+
+    <!-- Model from a certified device -->
+    <string name="config_certifiedModel" translatable="false">Pixel 7</string>
 </resources>
