--- a/cheetah/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/cheetah/overlay/frameworks/base/core/res/res/values/config.xml
@@ -304,8 +304,8 @@
     -->
     <bool name="config_bg_current_drain_auto_restrict_abusive_apps">true</bool>
     
-    <!-- Fingerprint from a certified device against current platform SPL level -->
-    <string name="config_certifiedFingerprint" translatable="false">google/cheetah/cheetah:13/TD1A.220804.031/9071314:user/release-keys</string>
+    <!-- Fingerprint from stock ROM -->
+    <string name="config_stockFingerprint" translatable="false">google/cheetah/cheetah:13/TQ1A.221205.011/9244662:user/release-keys</string>
 
     <!-- Model from a certified device -->
     <string name="config_certifiedModel" translatable="false">Pixel 7 Pro</string>
